--- a/website/templates/resources.html
+++ b/website/templates/resources.html
@@ -1,6 +1,49 @@
-{% extends "base.html" %} {% block title %} Resources {% endblock %}
+{% extends "base.html" %} {% block title %} Resources : BHS Digital technologies Information Centre {% endblock %}
 
 {% block content %}
-<br>
-<h1>This is the resources page</h1>
+
+<div class="resources-question">
+    <h3 class="heading-a">General Question</h3>
+    <h1 class="heading-a">Which job will get me rich?</h1>
+    <br>
+    <h4 class="heading-a grey-heading">And will be easy to study?<br>AND is enjoyable?</h4>
+    <br>
+    <h3 class="heading-a">Learning prgramming could help!</h3>
+    <br>
+    <a href="#">
+        <button class="button-angular button-a">CLICK TO LEARN MORE</button>
+    </a>
+</div>
+<div class="resources-banner no-margin">
+    <div class="resources-banner-content text-white">
+        <h4 class="heading-d">Did you know, programmers can earn up to</h4>
+        <br><br>
+        <h2 class="heading-e resources-banner-heading">$172,000 per year?</h2>
+        <br><br><br>
+        <p class="heading-d resources-banner-p">
+            Have never done Digital technologies? No worries!
+            <br>Click below to learn more on how to get started
+            <br>↓
+        </p>
+            <a>
+                <button class="learn-more-btn button-round button-b">Click to learn more</button>
+            </a>
+    </div>    
+</div>
+
+<div id="info-center">
+    <h2 class="heading-i">INFORMATION CENTRE</h2>
+    <div class="info-boxes text-i">
+        <div class="info-box">
+            <p><a href="#" class="info-link">career<br>opportunities</a></p>
+        </div>
+        <div class="info-box">
+            <p><a href="#" class="info-link">courses at<br>bhs</a></p>
+        </div>
+        <div class="info-box">
+            <p><a href="#" class="info-link">self-learn<br>resources</a></p>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
