--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,32 +14,72 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mallanna&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Major+Mono+Display&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sen:wght@400..800&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Holtwood+One+SC&display=swap" rel="stylesheet">
+    <!-- END FONTS -->
+
     <link rel="stylesheet" href= "{{ url_for('static',filename='styles.css') }}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="custom-bg">
-  <nav class = "navbar navbar-expand-lg navbar-light custom-bg">
-    <button 
-      class="navbar-toggler" 
-      type ="button" 
-      data-toggle="collapse" 
-      data-target="#navbar"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbar">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" id="home" href="/">Home</a>
-        <a class="nav-item nav-link" id="resources" href="/resources">Resources</a>
-        <a class="nav-item nav-link" id="quiz" href="/quiz/home">Quiz</a>
-        <a class="nav-item nav-link" id="forum" href="/forum/home">Forum board</a>
-        {% if session.get('user') %}
-          <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-        {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signup" href="/sign-up">Sign Up</a>
-        {% endif %}
+  
+  <nav class = "navbar navbar-expand-lg navbar-light custom-bg fixed-top">
+    <div class="container-fluid"> 
+      <button 
+        class="navbar-toggler" 
+        type ="button" 
+        data-toggle="collapse" 
+        data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbar">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" id="home" href="/">Home</a>
+          <a class="nav-item nav-link" id="resources" href="/resources">Resources</a>
+          <a class="nav-item nav-link" id="quiz" href="/quiz/home">Quiz</a>
+          <a class="nav-item nav-link" id="forum" href="/forum/home">Forum board</a>
+          {% if session.get('user') %}
+            <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+          {% else %}
+            <a class="nav-item nav-link" id="login" href="/login">Login</a>
+            <a class="nav-item nav-link" id="signup" href="/sign-up">Sign Up</a>
+          {% endif %}
+        </div>
       </div>
     </div>
   </nav>
@@ -68,10 +108,17 @@
   {% endif %}
   {% endwith %}
 
-  <div class="container custom-bg">
+  <main class="container custom-bg">
     {% block content %}
     {% endblock %}
-  </div>
+  </main>
+
+  <footer>
+    <div class="footer-content">
+        <!-- Add footer content here -->
+    </div>
+  </footer>
+
   <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
