--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -6,10 +6,28 @@ body {
   padding: 0;
   overflow-x: hidden;
   color: #2C2D2D;
+  margin-top: 57px; 
 }
 
 main {
-  margin-top: 57px; 
+  position: relative;
+  z-index: 1;
+}
+
+.custom-bg {
+  background-color: #F8F6F5; 
+}
+
+.flash-messages {
+  position: fixed;
+  top: 57px; /* Position right below the navbar */
+  left: 0;
+  right: 0;
+  z-index: 999;
+}
+
+.flash-message {
+  margin-bottom: 0;
 }
 
 
@@ -41,6 +59,19 @@ main {
   position: relative;
   margin-left: -50vw;
   margin-right: -50vw;
+}
+
+.border-text {
+  text-shadow: 
+  -1.1px 1.1px 0 #000,
+  1.1px 1.1px 0 #000,
+  1.1px -1.1px 0 #000,
+  -1.1px -1.1px 0 #000;
+}
+
+.blur {
+  filter: blur(1px);
+  -webkit-filter: blur(1px);
 }
 
 h1 {
@@ -82,8 +113,115 @@ h1 {
 
 
 /* ========== Info Center ========== */
+.info-center {
+  padding: 180px 0 200px;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.resources-button {
+  background-color: #8cbdb9;
+  color: #F9F6F4;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.info-center h2 {
+  color: #F8F6F5;
+  font-size: 1.7em;
+  text-align: center;
+  margin-bottom: 30px;
+  padding-right: 200px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.card-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.card {
+  flex: 1;
+  padding: 40px 10px;
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 10px;
+  border-width: 0;
+  overflow: hidden;
+  position: relative;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  flex-direction: column;
+}
+.card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, 
+      rgba(0,0,0,0.1) 0%,
+      rgba(0,0,0,0.3) 50%,
+      rgba(0,0,0,0.7) 100%);
+  z-index: 1;
+}
+.card-image {
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.card-image-container {
+  /* Gets rid of the inner shadow created within the box */
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  overflow: hidden;
+}
+.card-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 20px;
+  color: white;
+  z-index: 2;
+}
+.card-category {
+  font-size: 12px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+.card h3 {
+  margin: 0;
+  font-size: 18px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid white;
+}
+.card .icon {
+  position: absolute;
+  bottom: 30px;
+  left: 30px;
+  background-color: #FFD98E;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+  z-index: 3;
+}
 
-#info-center {
+/* #info-center {
   padding: 10rem 0;
   color: #692C2C;
 }
@@ -123,7 +261,7 @@ h1 {
 .info-link:hover {
   color: #9d6e6e;
   text-decoration: none;
-}
+} */
 
 
 /* ========== Fonts ========== */
@@ -161,6 +299,13 @@ h1 {
   font-style: normal;
 }
 
+.heading-f {
+  font-family: "Michroma", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 .heading-i {
   font-family: "Sen", sans-serif;
   font-optical-sizing: auto;
@@ -174,6 +319,19 @@ h1 {
   font-weight: 300;
   font-style: normal;
   line-height: 23px;
+}
+
+.text-c {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.text-d {
+  font-family: "Lalezar", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .text-i {
@@ -208,10 +366,6 @@ footer {
   position: relative;
   margin-left: -50vw;
   margin-right: -50vw;
-}
-
-.custom-bg {
-    background-color: #F8F6F5; 
 }
 
 .inline {
@@ -456,6 +610,97 @@ main {
   /* 
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black; */
+}
+
+
+
+/* ========== Resources ========== */
+.banner {
+  background-image: url('img/career-banner.png'); /* Replace with your background image */
+  background-size: cover;
+  background-position: center;
+  height: 60vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-content {
+  text-align: center;
+  color: white;
+}
+
+.banner h1 {
+  font-size: 3em;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.banner-buttons button {
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+  padding: 10px 20px;
+  margin: 0 10px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.banner-buttons button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.career-section {
+  padding: 200px 50px;
+}
+
+.career-card-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 50px;
+}
+
+.career-card {
+  width: 30%;
+}
+
+.career-image-container {
+  position: relative;
+  width: 30px; /* Adjust width as needed */
+}
+
+.career-image-container img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.career-info h2 {
+  font-size: 1.8em;
+  margin-top: 15px;
+}
+
+.career-description {
+  width: 50%;
+  text-align: left;
+  font-size: 1.1em;
+}
+
+.career-description p {
+  margin-bottom: 20px;
+}
+
+.career-description button {
+  padding: 10px 20px;
+  border: 1px solid #333;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.career-description button:hover {
+  background-color: #333;
+  color: white;
 }
 
 
