--- a/website/templates/r-self.html
+++ b/website/templates/r-self.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} Resources : BHS Digital technologies Information Centre {% endblock %}
+{% extends "base.html" %} {% block title %} Self-learn Resources : BHS Digital technologies Information Centre {% endblock %}
 
 {% block content %}
 vello
