--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -1,12 +1,19 @@
+
+
 body {
-  /* background-image: url('img/일러스트530-2.png');
-  background-repeat: repeat; */
+  background-image: url('../static/img/grid.png');
+  background-repeat: repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: 100vw;  
+  background-color: #F8F6F5; 
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   color: #2C2D2D;
-  margin-top: 57px; 
+  margin-top: 80px; 
 }
 
 main {
@@ -14,13 +21,9 @@ main {
   z-index: 1;
 }
 
-.custom-bg {
-  background-color: #F8F6F5; 
-}
-
 .flash-messages {
   position: fixed;
-  top: 57px; /* Position right below the navbar */
+  top: 80px; /* Position right below the navbar */
   left: 0;
   right: 0;
   z-index: 999;
@@ -40,7 +43,9 @@ main {
   top: 0;
   z-index: 99; */
   border-bottom:2px solid #aba3a3;
+  background-color: #F9F6F4;
   width: 100vw;
+  min-height: 80px;
 }
 
 
@@ -59,6 +64,14 @@ main {
   position: relative;
   margin-left: -50vw;
   margin-right: -50vw;
+}
+
+.left-align {
+  text-align: left;
+}
+
+.right-align {
+  text-align: right;
 }
 
 .border-text {
@@ -100,6 +113,16 @@ h1 {
   border-top: solid 1px rgb(255,255,255, 0.5);
   border-bottom: solid 0.1px rgb(255,255,255, 0.5);
   padding: 7% 0 3%;
+}
+
+.border-top-black {
+  border-top: solid 1px rgba(0, 0, 0, 0.5);
+  padding-top: 30px;
+}
+
+.border-bottom-black {
+  border-bottom: solid 1px rgba(0, 0, 0, 0.5);
+  padding-bottom: 30px;
 }
 
 .grey-heading {
@@ -328,6 +351,13 @@ h1 {
   font-style: normal;
 }
 
+.text-c-bold {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
 .text-d {
   font-family: "Lalezar", system-ui;
   font-weight: 400;
@@ -348,6 +378,12 @@ h1 {
 
 .button-b {
   font-family: "Modak", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.button-c {
+  font-family: "McLaren", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -406,12 +442,11 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #FFD98E;
+  background-color: rgb(255, 217, 142);
   padding: 8rem;
   padding-left: 20rem;
   padding-right: 20rem;
   line-height: 100%;
-
 }
 
 .home-hero-content {
@@ -614,12 +649,15 @@ main {
 
 
 
-/* ========== Resources ========== */
-.banner {
+/* ========== Resources - Career opportunities ========== */
+.career-banner-img {
   background-image: url('img/career-banner.png'); /* Replace with your background image */
+}
+
+.banner {
   background-size: cover;
   background-position: center;
-  height: 60vh;
+  height: 78vh;
   position: relative;
   display: flex;
   justify-content: center;
@@ -627,6 +665,7 @@ main {
 }
 
 .banner-content {
+  align-items: center;
   text-align: center;
   color: white;
 }
@@ -635,16 +674,22 @@ main {
   font-size: 3em;
   font-weight: bold;
   margin-bottom: 20px;
+  letter-spacing: 6px;
+}
+
+.banner-buttons {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .banner-buttons button {
   background-color: transparent;
   border: 1px solid white;
   color: white;
-  padding: 10px 20px;
-  margin: 0 10px;
+  width: 240px;
+  height: 80px;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 0.8em;
 }
 
 .banner-buttons button:hover {
@@ -652,11 +697,13 @@ main {
 }
 
 .career-section {
-  padding: 200px 50px;
+  padding: 150px 50px;
 }
 
 .career-card-container {
   display: flex;
+  flex-wrap: wrap;
+	align-content: stretch;
   justify-content: space-evenly;
   align-items: center;
   margin: 50px;
@@ -666,41 +713,413 @@ main {
   width: 30%;
 }
 
-.career-image-container {
+.career-img-container {
   position: relative;
-  width: 30px; /* Adjust width as needed */
+  width: 300px; /* Adjust width as needed */
 }
 
-.career-image-container img {
+.career-img-container img {
   width: 100%;
+  border-radius: 20px;
+}
+
+/* Overlay text on top of the image */
+.textbox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Align text at the bottom */
+  
+  padding: 20px;
+  padding-top: 70px;
+  color: white;
   border-radius: 10px;
 }
 
-.career-info h2 {
+.textbox hr {
+  margin-top: 40px;
+  margin-left: 0px;
+  border-top: 1px solid white;
+  width: 50px;
+}
+
+.textbox h2 {
   font-size: 1.8em;
-  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+.textbox p {
+  font-size: 0.9em;
 }
 
 .career-description {
   width: 50%;
+  margin-left: 30px;
   text-align: left;
   font-size: 1.1em;
 }
 
 .career-description p {
-  margin-bottom: 20px;
+  font-size: 0.9em;
+  margin-bottom: 35px;
+  padding: 4px 0 4px 20px;
+  border-left: 1.8px solid black;
 }
 
 .career-description button {
-  padding: 10px 20px;
+  padding: 20px 30px;
   border: 1px solid #333;
+  border-radius: 40px;
   background-color: transparent;
   cursor: pointer;
+  font-size: 0.8em;
 }
 
 .career-description button:hover {
   background-color: #333;
   color: white;
+}
+
+
+
+/* ========== Resources - Career opportunities - details ========== */
+
+.career-detail-container {
+  width: 94%;
+  margin: auto;
+  overflow: hidden;
+}
+
+/* BANNER! */
+.detail-banner {
+  padding-top: 100px;
+}
+
+.detail-banner-content {
+  display: flex;
+}
+
+.detail-info-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 10px;
+  top: 70px;
+  width: 480px;
+  height: 430px;
+  background-color: #0B0B10;
+  color: #E5EEE8;
+}
+
+.detail-route {
+  color: #79AEAC;
+  font-size: 0.8em;
+  text-align: right;
+  padding-top: 15px;
+  padding-right: 5%;
+}
+
+.detail-route a {
+  color: #E5EEE8;
+}
+
+.detail-info-box-content {
+  width: 350px;
+  padding-top: 30px;
+}
+
+.career-detail-container h1 {
+  font-size: 2.7em;
+  line-height: 60px;
+}
+
+.detail-banner-textbox {
+  display: flex;
+  justify-content: space-between;
+  border-top: solid 1px rgb(229,238,232,0.8);
+  border-bottom: solid 1px rgb(229,238,232,0.8);
+  margin-top: 30px ;
+  padding: 7% 5% 3%;
+  line-height: 30px;
+}
+
+.detail-intro {
+  position: absolute;
+  top: 170px;
+  left: 47%;
+  width: 350px;
+  border-left: solid 2px black;
+  padding-left: 20px;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.detail-banner-img {
+  padding-top: 220px;
+  width: 100vw;
+  z-index: -1;
+}
+
+.detail-banner-img img {
+  max-width: 100%;
+}
+
+.detail-main-container {
+  padding: 90px 0 0 0;
+  margin-top: 20px;
+}
+
+/* main content a  */
+.detail-main-content-a {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.detail-sidebar {
+  width: 30%;
+  margin-right: 30px;
+  height: fit-content;
+  background: #E2E2E2;
+  color: #0B0B10;
+  padding: 10px 18px;
+  border-radius: 15px;
+}
+
+.detail-sidebar a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.sidebar-content:hover {
+  color: white;
+  background-color: #333;
+}
+
+.sidebar-content-current {
+  display: flex;
+  justify-content: space-between;
+  background-color: #79AEAC;
+  color: white;
+  padding: 20px;
+  width: 100%;
+  text-align: left;
+  margin: 10px 0;
+  border: 0;
+  border-radius: 10px;
+  cursor: not-allowed;
+}
+
+.sidebar-content {
+  display: flex;
+  justify-content: space-between;
+  background-color: #F9F6F4;
+  padding: 20px;
+  width: 100%;
+  text-align: left;
+  margin: 10px 0;
+  border: 0;
+  border-radius: 10px;
+}
+
+.career-detail-content {
+  flex: 2;
+  margin: 0 20px;
+}
+
+.detail-description-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.detail-vertical-line {
+  width: 15px; /* Line width */
+  background-color: black; /* Line color */
+  height: 140px; /* Override in-line if you want specific height. */
+  float: left;
+}
+
+.detail-textbox-container{
+  padding-left: 30px;
+}
+
+.detail-textbox {
+  padding: 15px 0;
+}
+
+.detail-textbox p {
+  font-size: 0.8em;
+  line-height: 27px;
+}
+
+.detail-textbox ul {
+  font-size: 0.8em;
+  line-height: 30px;
+  padding-left: 30px;
+  margin-left: 0;
+}
+
+/* main content b */
+
+.detail-main-content-b {
+  padding: 0 10px;
+}
+
+.responsibility-heading {
+  margin-left: 10px;
+}
+
+.responsibility-top-border {
+  width: 260px;
+  margin-left: -2px;
+  margin-bottom: 14px;
+  border-top: solid 2px black;
+}
+
+.key-responsibilities {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+}
+.responsibility-item {
+  display: flex;
+  flex-basis: 48%;
+  border: solid 1px black;
+  margin-bottom: 20px;
+  padding: 20px;
+  border-radius: 15px;
+}
+
+.responsibility-item img {
+  max-height: 60px;
+  width: auto;
+}
+
+.responsibility-textbox {
+  margin-left: 20px;
+}
+
+.responsibility-textbox h5 {
+  font-size: 1em;
+  margin-bottom: 2px;
+}
+
+.responsibility-textbox p{
+  font-size: 0.8em;
+  margin-bottom: 0;
+}
+
+.skills-required {
+  display: flex;
+  align-items: center;
+  padding: 40px 0 0 0;
+  margin-top: 20px;
+}
+
+.skills-required img {
+  max-width: 370px;
+  border-radius: 20px;
+}
+
+.skills-required-textbox {
+  padding: 20px 40px;
+}
+
+.skills-required-textbox ul {
+  list-style-type: none;
+  padding-left: 20px;
+}
+
+.skills-required-textbox li {
+  margin-bottom: 10px;
+}
+
+
+
+/* ========== Resources - Courses at BHS ========== */
+
+.courses-banner-img {
+  background-image: url('img/courses-banner.png'); /* Replace with your background image */
+}
+
+.bhs-courses-heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 140px;
+}
+
+.courses-level {
+  padding: 150px 20% 0;
+}
+
+.courses-level details {
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.courses-level summary {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  font-weight: bold;
+  position: relative;
+}
+
+.courses-level summary::before {
+  content: '';
+  width: 16px; /* Set the size of the icon */
+  height: 16px;
+  margin-right: 30px;
+  padding-bottom: 30px;
+  background-image: url('../static/img/right-arrow.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  transform-origin: center center;
+  transition: transform 0.3s ease;
+}
+
+/* .courses-level summary::before {
+  content: '>';
+  font-weight: bold;
+  margin-right: 30px;
+  padding-bottom: 15px;
+  display: inline-block;
+  transform-origin: center center;
+  transition: transform 0.3s ease;
+  line-height: 1;
+  font-size: 1.5em; 
+} */
+
+.courses-level details[open] summary::before {
+  transform: rotate(90deg);
+}
+
+.courses-level ul {
+  margin-top: 10px;
+  margin-left: 60px;
+  list-style-type: none;
+}
+
+.bhs-course-link {
+  color: black;
+  text-decoration: none;
+  line-height: 28px;
+}
+
+.bhs-course-link:hover {
+  color:#79AEAC ;
+  text-decoration: none;
 }
 
 
